--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -21,9 +21,9 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: trivy-k8s-report
-          path: ${{github.workspace}}/trivy-k8s-report.sarif
+          path: 'trivy-results.sarif'
 
       - name: uload sarif report to github
         uses: github/codeql-action/upload-sarif@v1
         with:
-          sarif_file: ${{github.workspace}}/trivy-k8s-report.sarif
+          sarif_file: 'trivy-results.sarif'
