--- a/.github/workflows/trivy.yaml
+++ b/.github/workflows/trivy.yaml
@@ -14,8 +14,7 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: "mockserver/mockserver"
-          format: 'template'
-          template: '@/contrib/sarif.tpl'
+          format: 'sarif'
           output: "trivy-results.sarif"
 
       - name: Upload Report
@@ -25,6 +24,6 @@ jobs:
           path: 'trivy-results.sarif'
 
       - name: uload sarif report to github
-        uses: github/codeql-action/upload-sarif@v1
+        uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: 'trivy-results.sarif'
